--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght;500;600;700&family=Playfair+Display:wght;400;500;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/epc-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>epc-frontend</title>
   </head>
